# Shiva

./: .gitattributes  .gitignore  .gitmodules  ACKNOWLEDGEMENTS  CITATION.cff  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTORS  COPYRIGHT  LICENSE  NOTICE  README.md
.devcontainer/: devcontainer.json
.github/workflows/: continuousIntegration.yml
cmake/: CMakeBasics.cmake  Config.cmake  Macros.cmake  ShivaConfig.cmake.in  shiva-config.cmake.in
docker/: buildAndPush.bash
docker/ubi/: Dockerfile
docker/ubi-cuda11/: Dockerfile
docker/ubi-cuda12/: Dockerfile
docker/ubi8/: Dockerfile
docker/ubi8-cuda12/: Dockerfile
docker/ubuntu/: Dockerfile
docker/ubuntu-cuda11/: Dockerfile
docker/ubuntu22/: Dockerfile
docker/ubuntu22-cuda11/: Dockerfile
docs/: CMakeLists.txt  Doxyfile.in  ShivaInterface.plantuml
docs/doxygen/: ShivaConfig.hpp
docs/mathematica/: LagrangeBasisAndParentElementSolutions.nb
hostconfigs/: environment.cmake
hostconfigs/LLNL/: lassen-cuda-11-base.cmake  quartz-base.cmake  tioga-base.cmake  tioga-cce-15.cmake
hostconfigs/TTE/: maple_rocky9.cmake
hostconfigs/apple/: appleM1-clang.cmake  macOS_base.cmake
include/: ShivaConfig.hpp.in
include/common/: CMakeLists.txt  IndexTypes.hpp  ShivaMacros.hpp
include/discretizations/: CMakeLists.txt
include/discretizations/finiteElementMethod/parentElements/: ParentElement.hpp
include/functions/: CMakeLists.txt
include/functions/quadrature/: Quadrature.hpp
include/functions/spacing/: Spacing.hpp
include/geometry/: CMakeLists.txt
include/geometry/mapping/: LinearTransform.hpp  Scaling.hpp
include/geometry/shapes/: NSimplex.hpp
include/shiva/: ShivaConfig.hpp.in  namespaceDocumentation.hpp
include/shiva/common/: CArray.hpp  CArrayHelper.hpp  LinearIndex.hpp  MathUtilities.hpp  MultiIndex.hpp  NestedSequenceUtilities.hpp  SequenceUtilities.hpp  ShivaMacros.hpp  pmpl.hpp  types.hpp
include/shiva/discretizations/finiteElementMethod/parentElements/: ParentElement.hpp
include/shiva/functions/bases/: BasisProduct.hpp  LagrangeBasis.hpp
include/shiva/functions/spacing/: Spacing.hpp
include/shiva/geometry/mapping/: LinearTransform.hpp  Scaling.hpp  UniformScaling.hpp
include/shiva/geometry/shapes/: InterpolatedShape.hpp  NCube.hpp  NSimplex.hpp
scripts/: aggregateOrSplit.py  ci_build_and_test.sh  ci_build_and_test_in_container.sh  compare_uncrustify.py  config-build.py
src/: .clang-format  CMakeLists.txt  Shiva.hpp  ShivaConfig.hpp.in  namespaceDocumentation.hpp  uncrustify.cfg
src/common/: CArray.hpp  CArrayHelper.hpp  CMakeLists.txt  IndexTypes.hpp  LinearIndex.hpp  MathUtilities.hpp  MultiDimensionalArray.hpp  MultiDimensionalArrayHelper.hpp  MultiDimensionalBase.hpp  MultiDimensionalSlice.hpp  MultiDimensionalSpan.hpp  MultiIndex.hpp  NestedSequenceUtilities.hpp  SequenceUtilities.hpp  ShivaErrorHandling.hpp  ShivaMacros.hpp  pmpl.hpp  types.hpp
src/common/unitTests/: CMakeLists.txt  testCArray.cpp  testIndexTypes.cpp  testMultiDimensionalArray.cpp  testMultiDimensionalSlice.cpp  testNestedSequenceUtilities.cpp  testSequenceUtilities.cpp  testShivaErrorHandling.cpp  testShivaMacros.cpp
src/discretizations/: CMakeLists.txt
src/discretizations/finiteElementMethod/: FiniteElementSpace.hpp
src/discretizations/finiteElementMethod/bases/: LagrangeBasis.hpp  LagrangeBasis1.hpp  LagrangePolynomial.hpp
src/discretizations/finiteElementMethod/parentElements/: ParentElement.hpp
src/discretizations/finiteElementMethod/quadrature/: Quadrature.hpp
src/discretizations/quadrature/: Quadrature.hpp
src/discretizations/spacing/: Spacing.hpp
src/discretizations/unitTests/: CMakeLists.txt  LagrangeBasisAndParentElementSolutions.nb  testFiniteElementSpace.cpp  testLagrangeBasis.cpp  testParentElement.cpp  testParentElementSolutions.hpp  testQuadrature.cpp  testSpacing.cpp
src/functions/: CMakeLists.txt
src/functions/bases/: BasisProduct.hpp  LagrangeBasis.hpp
src/functions/quadrature/: Quadrature.hpp
src/functions/unitTests/: testLagrangeBasis.cpp  testQuadrature.cpp  testSpacing.cpp
src/geometry/: CMakeLists.txt  CellHexahedron.hpp  CellUtilities.hpp  Cube.hpp  Cuboid.hpp  NCube.hpp  RectangularCuboid.hpp  geometryUtilities.hpp
src/geometry/mapping/: JacobianTransforms.hpp  LinearTransform.hpp  Scaling.hpp  UniformScaling.hpp
src/geometry/mapping/unitTests/: CMakeLists.txt  testGeometryHelpers.hpp  testLinearTransform.cpp  testScaling.cpp  testUniformScaling.cpp
src/geometry/shapes/: InterpolatedShape.hpp  NCube.hpp  NSimplex.hpp
src/geometry/shapes/unitTests/: CMakeLists.txt  testInterpolatedShape.cpp  testInterpolatedShapeSolutions.hpp  testNCube.cpp  testNSimplex.cpp
src/geometry/unitTests/: CMakeLists.txt  testCellHexahedron.cpp  testCellUtilities.cpp  testCube.cpp  testCuboid.cpp  testGeometry.cpp  testGeometryHelpers.hpp  testNCube.cpp  testRectangularCuboid.cpp
src/types/: CMakeLists.txt  IndexTypes.hpp  LinearIndex.hpp  MultiIndex.hpp  types.hpp
src/types/unitTests/: CMakeLists.txt  testIndexTypes.cpp
tests/: CMakeLists.txt
tests/common/: testCArray.cpp  testIndexTypes.cpp  testNestedSequenceUtilities.cpp  testSequenceUtilities.cpp  testShivaErrorHandling.cpp
tests/discretizations/finiteElementMethod/: testParentElement.cpp
tests/functions/: CMakeLists.txt  testLagrangeBasis.cpp  testQuadrature.cpp  testSpacing.cpp
tests/geometry/mapping/: LinearTransformSolutions.nb  testLinearTransform.cpp  testScaling.cpp  testUniformScaling.cpp
tests/geometry/shapes/: CMakeLists.txt  testInterpolatedShape.cpp  testInterpolatedShapeSolutions.hpp  testNCube.cpp  testNSimplex.cpp
